# wirgarten-tapir

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .schema.hash  CONTRIBUTING.md  Dockerfile  FINAL_IMPORT_MEMBERS.csv  FINAL_IMPORT_SHARES.csv  FINAL_IMPORT_SUBSCRIPTIONS.csv  Makefile  README.md  TEST_IMPORT_MEMBERS.csv  anteilsbewegungen.csv  docker-compose.yml  erntevertraege.csv  erntevertraege2.csv  import-masterdata.sh  ldap_testdata.ldif  masterdata.csv  members.csv  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  schema.yml  sonar-project.properties  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  vite.Dockerfile  vite.config.ts
.cursor/rules/: tapir-review-conventions.mdc
.github/workflows/: codeql.yml  dependency-review.yml  docker-build.yml  tests.yml
docker/keycloak/: Dockerfile
docker/openldap/: .dockerignore  Dockerfile
example_data/: transactional_emails.fixtures.json
scripts/: generate_api_clients.sh  generate_api_schema.sh  reset_all_containers.sh
src_frontend/: fixed_header.css  vite-env.d.ts
src_frontend/api-client/: index.ts  runtime.ts
src_frontend/association_memberships_config/: AssociationMembershipTypeCreateModal.tsx  AssociationMembershipTypeEditModal.tsx  AssociationMembershipTypePriceModal.tsx  AssociationMembershipTypeTable.tsx  AssociationMembershipsConfigBase.tsx  association_memberships_config_entry.tsx  getAssociationMembershipTypeCurrentPrice.ts
src_frontend/bestell_wizard/: BestellWizard.tsx  BestellWizardCoopShares.tsx  BestellWizardIntro.tsx  BestellWizardPickupLocation.tsx  BestellWizardProductType.tsx  ProductForm.tsx  ShoppingCart.ts  WaitingListModal.tsx  bestell_wizard_entry.tsx  sortProductTypes.ts
src_frontend/bestell_wizard_mobile/: BestellWizardMobile.tsx  BestellWizardMobileHeader.tsx  BestellWizardShoppingCartOverlay.tsx  bestell_wizard_mobile_entry.tsx
src_frontend/components/: ConfirmDeleteModal.tsx  ConfirmModal.tsx  DeliveryDayTabs.tsx  EmailInput.tsx  PlaceholderTableRows.tsx  TapirButton.tsx  TapirDateInput.tsx  TapirHelpButton.tsx  TapirToastContainer.tsx
src_frontend/configuration/: MandateReferencePreview.tsx  configuration_entry.tsx
src_frontend/contract_updates/: ConfirmRevokeModal.tsx  ContractUpdatesCard.tsx  ContractUpdatesConfirmationCard.tsx  ContractUpdatesConfirmationModal.tsx  contract_updates.tsx
src_frontend/credit_list/: CreateMemberCreditModal.tsx  CreditList.tsx  CreditListTable.tsx  credit_list_entry.tsx
src_frontend/csv_export_editor/: CYCLE_OPTIONS.ts  ColumnInput.tsx  CsvExportBuildModal.tsx  CsvExportCreateModal.tsx  CsvExportEditor.tsx  CsvExportModal.tsx  CsvExportTable.tsx  csv_export_editor_entry.tsx
src_frontend/dashboard/: DashboardPickupLocationCapacityBase.tsx  DashboardPreferredBreadStats.tsx  dashboard_entry.tsx
src_frontend/hooks/: useApi.ts
src_frontend/jokers/: JokerTestCard.tsx  joker_test_entry.tsx
src_frontend/member_list/: AssociationMembershipCancelButton.tsx  AssociationMembershipCancelModal.tsx  AssociationMembershipUpdateButton.tsx  AssociationMembershipUpdateModal.tsx  DeliveriesButton.tsx  DeliveryListModal.tsx  MemberDeleteButton.tsx  PaymentsButton.tsx  SubscriptionCancellationButton.tsx  member_list_entry.tsx
src_frontend/member_profile/: DeliveryListCard.tsx  ManageJokersModal.tsx  PickupLocationModal.tsx  SubscriptionCancellationButton.tsx  SubscriptionCancellationModal.tsx  member_profile_entry.tsx
src_frontend/new_contract_cancellations/: NewContractCancellationsCard.tsx  new_contract_cancellations_entry.tsx
src_frontend/payment_transactions/: PaymentTransactionDetailsModal.tsx  PaymentTransactionTable.tsx  PaymentTransactionsBase.tsx  RebuildSubscriptionPaymentsModal.tsx  payment_transactions_list_view_entry.tsx
src_frontend/pdf_export_editor/: PdfExportBuildModal.tsx  PdfExportEditor.tsx  PdfExportModal.tsx  PdfExportTable.tsx  pdf_export_editor_entry.tsx
src_frontend/pickup_location_config/: PickupLocationCapacityBase.tsx  PickupLocationCapacityModal.tsx  PickupLocationDeliveryChargeModal.tsx  constants.ts  pickup_location_config_entry.tsx
src_frontend/product_config/: CustomCycleDeliveryWeeksInput.tsx  GrowingPeriodBase.tsx  GrowingPeriodModal.tsx  ProductBase.tsx  ProductModal.tsx  ProductTypeBase.tsx  ProductTypeCreateModal.tsx  ProductTypeEditModal.tsx  ProductTypeForm.tsx  ProductTypeModal.tsx  getNoticePeriodUnitDispay.ts  get_parameter_from_url.ts  get_period_id.ts  get_period_id_from_url.ts  product_config_entry.tsx
src_frontend/subscription_list/: SubscriptionAddContractButton.tsx  SubscriptionAddContractModal.tsx  SubscriptionChangeDatesButton.tsx  SubscriptionChangeDatesModal.tsx  SubscriptionChangeDatesWeekInput.tsx  SubscriptionChangePriceButton.tsx  SubscriptionChangePriceModal.tsx  SubscriptionTrialPeriodButton.tsx  SubscriptionTrialPeriodModal.tsx  subscription_list_entry.tsx
src_frontend/types/: CustomCycleDeliveryWeeks.ts  ExtendedPaymentsByDueDate.ts  TapirTheme.ts  ToastData.ts  TransactionsByDueDate.ts
src_frontend/utils/: HTML_ALLOWED_TEXT.ts  addToast.ts  formatAddress.ts  formatCurrency.ts  formatDateMonthAndYear.ts  formatDateNumeric.ts  formatDateText.ts  formatDateTextLong.ts  formatPercentage.ts  formatSubscription.ts  getCsrfToken.ts  getHtmlDescription.ts  getMaximumDate.ts  getMinimumDate.ts  getWeekdayDisplay.ts  handleRequestError.ts  isSubscriptionActive.ts  pagination.ts  shouldShowWarningNotAvailable.ts  updateProductPrices.ts
src_frontend/waiting_list/: PickupLocationWishesEditor.tsx  ProductWishesEditor.tsx  WaitingListCard.tsx  WaitingListConfirmBase.tsx  WaitingListEntryEditModal.tsx  WaitingListTable.tsx  waiting_list_card.css  waiting_list_confirm_entry.tsx  waiting_list_entry.tsx
tapir/: celery.py  settings.py  urls.py
tapir/accounts/: adapter.py  apps.py  config.py  drf_authentication.py  forms.py  middleware.py  models.py  urls.py  views.py
tapir/associations/: apps.py  models.py  serializers.py  urls.py  views.py
tapir/bakery/: apps.py  models.py  serializers.py  solver.py  urls.py  (+5 more)
(+2128 files in other folders)
