[tool.poetry]
name = "tapir"
version = "0.1.0"
description = ""
authors = ["Michael Kleimann <dev@mkleimann.com>", "Théophile Madet <theo.madet@posteo.net>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
django = "^6.0.1"
django-extensions = "^4.1"
psycopg2-binary = "^2.9.10"
django-tables2 = "^2.7.5"
django-filter = "^25.1"
tablib = "^3.8.0"
django-phonenumber-field = {version = "^5.2.0", extras = ["phonenumbers"]}
phonenumbers = "^9.0.25"
weasyprint = "^68.0"
django-select2 = "^8.4.1"
django-silk = "^5.4.0"
gunicorn = "^23.0.0"
django-environ = "^0.12.0"
django-bootstrap5 = "^26.1"
django-formtools = "^2.5.1"
celery = "^5.5.3"
redis = "5.3"
django-localflavor = "^5.0"
tomlkit = "^0.13.2"
nanoid = "^2.0.0"
lxml= "^5.4.0"
python-keycloak = "^5.5.1"
unidecode = "^1.4.0"
importlib-resources = "^6.5.2"
tapir-mail = { url = "https://github.com/FoodCoopX/tapir-mail-releases/releases/download/0.0.0-dev-1773149331/tapir_mail-0.0.0.dev1773149331-py3-none-any.whl" }
djangorestframework = "^3.16.0"
drf-spectacular = "^0.29.0"
django-vite = "^3.1.0"
django-weasyprint = "^2.4.0"
whitenoise = "^6.11.0"
pyjwt = "2.9"
legacy-cgi = "^2.6.3"
django-allauth = {extras = ["socialaccount"], version = "^65.10.0"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
Werkzeug = "^3.1.5"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-django = "^4.11.1"
pytest-sugar = "^1.1.1"
factory-boy = "^3.3.3"
black = "^26.1.0"
ptvsd = "^4.3.2"
icecream = "^2.1.4"
djlint = "^1.36.4"
ipython = "^9.9.0"
django-upgrade = "^1.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
profile="django"
use_gitignore=true
format_css=true
format_js=true

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/urls.py",
    "migrate.py"
]
relative_files = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tapir.settings"
python_files = ["tests.py", "test_*.py", "tests_*.py"]
testpaths = "tapir"