[tool.poetry]
name = "tapir"
version = "0.1.0"
description = ""
authors = ["Michael Kleimann <dev@mkleimann.com>", "Théophile Madet <theo.madet@posteo.net>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
django = "^6.0.4"
django-extensions = "^4.1"
psycopg2-binary = "^2.9.10"
django-tables2 = "^2.9.0"
django-filter = "^25.2"
tablib = "^3.8.0"
django-phonenumber-field = {version = "^5.2.0", extras = ["phonenumbers"]}
phonenumbers = "^9.0.27"
weasyprint = "^68.1"
django-select2 = "^8.4.8"
django-silk = "^5.5.0"
gunicorn = "^25.3.0"
django-environ = "^0.12.0"
django-bootstrap5 = "^26.2"
django-formtools = "^2.5.1"
celery = "^5.6.3"
redis = "5.3"
django-localflavor = "^5.0"
tomlkit = "^0.13.2"
nanoid = "^2.0.0"
lxml= "^6.0.2"
python-keycloak = "^7.1.1"
unidecode = "^1.4.0"
importlib-resources = "^6.5.2"
tapir-mail = { url = "https://github.com/FoodCoopX/tapir-mail-releases/releases/download/0.0.0-dev-1774347435/tapir_mail-0.0.0.dev1774347435-py3-none-any.whl" }
djangorestframework = "^3.17.1"
drf-spectacular = "^0.29.0"
django-vite = "^3.1.0"
django-weasyprint = "^2.4.0"
whitenoise = {extras = ["brotli"], version = "^6.12.0"}
pyjwt = "2.9"
legacy-cgi = "^2.6.3"
django-allauth = {extras = ["socialaccount"], version = "^65.10.0"}
djhtml = "^3.0.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
Werkzeug = "^3.1.8"
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
pytest-django = "^4.12.0"
pytest-sugar = "^1.1.1"
factory-boy = "^3.3.3"
black = "^26.3.1"
ptvsd = "^4.3.2"
icecream = "^2.2.0"
ipython = "^9.12.0"
django-upgrade = "^1.30.0"
pytest-xdist = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/urls.py",
    "migrate.py"
]
relative_files = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tapir.settings"
python_files = ["tests.py", "test_*.py", "tests_*.py"]
testpaths = "tapir"